<resources>
    <string name="app_name">Londra</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">إنشاء حساب جديد</string>
    <string name="login_welcome">مرحبا بك مجددا</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="txt_login">تسجيل دخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="register_welcome">إنشاء حساب جديد</string>
    <string name="txt_register">إنشاء حساب جديد</string>
    <string name="profile">الاسم</string>
    <string name="phone">الجوال</string>
    <string name="txt_email_verification">من فضلك أدخل البريد الالكتروني الخاص بك وسنرسل لك رابط لإعادة تعيين كلمة مرور جديدة</string>
    <string name="txt_send_code">إرسال الرابط</string>
    <string name="txt_change_password_msg">تغيير كلمة المرور للبريد الالكتروني\n%s</string>
    <string name="pass_code">ادخل كود التحقق المرسل على للبريد الالكتروني\n%s</string>

    <string name="txt_change_password">تغيير كلمة المرور</string>
    <string name="password_repeat">إعادة كلمة المرور</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_main">الرئيسية</string>
    <string name="title_my_orders">طلباتي</string>
    <string name="title_notifications">تنبيهات</string>
    <string name="email_empty">أدخل البريد الإلكتروني</string>
    <string name="enter_password">أدخل كلمة المرور</string>
    <string name="password_mismatch">كلمة المرور غير متطابقة</string>
    <string name="title_profile">حسابي</string>
    <string name="title_design">تنسيق المظهر</string>
    <string name="special_orders">طلبات خاصة</string>
    <string name="title_my_prev_orders">طلبات سابقة</string>
    <string name="title_order_color">اللون: s%</string>
    <string name="title_order_sizes">المقاسات: s%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>