<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.gemidroid.londra.home.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_my_orders"
        android:name="com.gemidroid.londra.home.ui.myorders.MyOrdersFragment"
        android:label="@string/title_my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.gemidroid.londra.home.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_design"
        android:name="com.gemidroid.londra.home.ui.design.DesignFragment"
        android:label="@string/title_design"
        tools:layout="@layout/fragment_design" />

</navigation>