<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin30">

    <TextView
        android:id="@+id/txt_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textSize="@dimen/font25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin30"
        android:background="@drawable/edt_shape"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="@dimen/margin15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin15"
        app:layout_constraintTop_toBottomOf="@id/txt_login_back" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_password_eye"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/margin15"
        android:gravity="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/margin15"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin15"
        android:text="@string/forgot_password"
        android:padding="@dimen/margin10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin40"
        android:background="@drawable/btn_shape"
        android:text="@string/txt_login"

        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/txt_forgot_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>