<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin30">

    <TextView
        android:id="@+id/txt_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_change_password_msg" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_password_eye"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/margin15"
        android:gravity="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/margin15"
        app:layout_constraintTop_toBottomOf="@id/txt_change_password" />

    <EditText
        android:id="@+id/edt_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_password_eye"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/margin15"
        android:gravity="end"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:padding="@dimen/margin15"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin40"
        android:background="@drawable/btn_shape"
        android:text="@string/txt_change_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/edt_password_repeat" />


</androidx.constraintlayout.widget.ConstraintLayout>