<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin30"
    tools:context=".forgotpassword.ui.ForgetPasswordFragment">

    <TextView
        android:textColor="@color/colorBlack"
        android:id="@+id/txt_verify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_verification"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin30"
        android:background="@drawable/edt_shape"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="@dimen/margin15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin15"
        app:layout_constraintTop_toBottomOf="@id/txt_verify_email" />

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin40"
        android:background="@drawable/btn_shape"
        android:text="@string/txt_send_code"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />


</androidx.constraintlayout.widget.ConstraintLayout>